--- a/mandelbulber2/qt/image_save_dialog.ui
+++ b/mandelbulber2/qt/image_save_dialog.ui
@@ -213,85 +213,158 @@
                 </property>
                </widget>
               </item>
-              <item row="4" column="0" colspan="3">
-               <widget class="QLabel" name="label_rerender_required_info">
-                <property name="text">
-                 <string>Following channels are only rendered on demand
-and will only be present after enabling and re-render.</string>
-                </property>
-               </widget>
-              </item>
-              <item row="5" column="0">
-               <widget class="MyCheckBox" name="checkBox_normal_enabled">
-                <property name="text">
-                 <string>Surface Normal</string>
-                </property>
-               </widget>
-              </item>
-              <item row="5" column="1">
-               <widget class="MyComboBox" name="comboBox_normal_quality">
-                <item>
-                 <property name="text">
-                  <string>8 bit</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>16 bit</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>32 bit</string>
-                 </property>
-                </item>
-               </widget>
-              </item>
-              <item row="5" column="2">
-               <widget class="MyLineEdit" name="text_normal_postfix">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
-              <item row="6" column="0">
-               <widget class="MyCheckBox" name="checkBox_specular_enabled">
-                <property name="text">
-                 <string>Specular</string>
-                </property>
-               </widget>
-              </item>
-              <item row="6" column="1">
-               <widget class="MyComboBox" name="comboBox_specular_quality">
-                <item>
-                 <property name="text">
-                  <string>8 bit</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>16 bit</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>32 bit</string>
-                 </property>
-                </item>
-               </widget>
-              </item>
-              <item row="6" column="2">
-               <widget class="MyLineEdit" name="text_specular_postfix">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
              </layout>
             </item>
            </layout>
           </widget>
          </item>
+         <item>
+            <layout class="QVBoxLayout" name="verticalLayout_10">
+             <item>
+              <widget class="MyGroupBox" name="groupCheck_optional_image_channels">
+               <property name="title">
+                <string>Optional Image Channels</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_optional_image_channels">
+                <property name="spacing">
+                 <number>2</number>
+                </property>
+                <item row="0" column="0" colspan="3">
+                 <widget class="QLabel" name="label_rerender_required_info">
+                  <property name="text">
+                   <string>Following channels are only rendered on demand
+and will only be present after enabling and re-render.</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QLabel" name="label_10">
+                  <property name="text">
+                   <string>Image Channel</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="1">
+                 <widget class="QLabel" name="label_8">
+                  <property name="text">
+                   <string>Quality</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="2">
+                 <widget class="QLabel" name="label_9">
+                  <property name="text">
+                   <string>Postfix</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="MyCheckBox" name="checkBox_normal_enabled">
+                  <property name="text">
+                   <string>Surface Normal</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="1">
+                 <widget class="MyComboBox" name="comboBox_normal_quality">
+                  <item>
+                   <property name="text">
+                    <string>8 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>16 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>32 bit</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="2" column="2">
+                 <widget class="MyLineEdit" name="text_normal_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0">
+                 <widget class="MyCheckBox" name="checkBox_specular_enabled">
+                  <property name="text">
+                   <string>Specular</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="1">
+                 <widget class="MyComboBox" name="comboBox_specular_quality">
+                  <item>
+                   <property name="text">
+                    <string>8 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>16 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>32 bit</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="3" column="2">
+                 <widget class="MyLineEdit" name="text_specular_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="0">
+                 <widget class="MyCheckBox" name="checkBox_world_enabled">
+                  <property name="text">
+                   <string>World</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="1">
+                 <widget class="MyComboBox" name="comboBox_world_quality">
+                  <item>
+                   <property name="text">
+                    <string>8 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>16 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>32 bit</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="4" column="2">
+                 <widget class="MyLineEdit" name="text_world_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
+           </item>
          <item>
           <widget class="QGroupBox" name="groupBox_2">
            <property name="title">
